@@ -27,6 +27,7 @@ Changes between Oolite 1.77 and Oolite 1.77.1:
 * Fix contract reputation calculations so that negative rep works properly
 * Fix inconsistency with cloaking device behaviour
 * Fix calculation of heat damage to subentities
+* Fix updates of energy, laser temp, alert condition related to autopilot
 
 -------------------------------------------------------------------------------
 
